# EBR-KE

./: .gitignore  README.md  README.txt  SETUP.md  docker-compose.yml
backend/: .env.example  Dockerfile  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/apps/: __init__.py
backend/apps/api/v1/: urls.py
backend/apps/audit/: __init__.py  apps.py  middleware.py
backend/apps/audit/models/: __init__.py  audit_log.py  signatures.py
backend/apps/batch_records/: __init__.py  apps.py
backend/apps/core/: exceptions.py  serializer_mixins.py  validators.py
backend/apps/iam/: __init__.py  apps.py  permissions.py  signals.py
backend/apps/iam/urls/: auth.py  (+5 more)
backend/apps/notifications/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/schema_manager/: __init__.py  apps.py
backend/apps/tenants/: __init__.py  admin.py  models.py
backend/apps/workflow/: __init__.py  apps.py
backend/config/: __init__.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py  staging.py  testing.py
backend/modules/: __init__.py
backend/modules/agriculture/: apps.py  urls.py
backend/modules/healthcare/: __init__.py  apps.py  urls.py
backend/modules/manufacturing/: apps.py  urls.py
backend/requirements/: base.txt  development.txt  production.txt
backend/services/: __init__.py
backend/services/encryption/: __init__.py  field_encryption.py  signature_service.py
backend/tests/api/: test_auth.py  test_batch_records.py  test_users.py  test_workflows.py
(+151 files in other folders)
